[package]
name = "srt-router"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.1"
futures-util = "0.3"
log = "0.4"
pretty_env_logger = "0.4"
srt-tokio = { path = "../srt-tokio" }
tokio-stream = "0.1"
itertools = "0.10"
futures = "0.3"
ctrlc = "3.2"
argh = "0.1"

[dependencies.tokio]
features = ["net", "time", "test-util", "macros", "io-util", "io-std", "sync", "rt-multi-thread"]
version = "1"
